dark scrollbar and fixing bugs

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   color: white;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
@@ -30,4 +34,28 @@
 
 .no-scroll {
   overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 12px; /* Largura do scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #1f1f1f; /* Cor de fundo da trilha do scrollbar */
+  border-radius: 6px; /* Bordas arredondadas */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #4B5563; /* Cor do "thumb" (a parte móvel do scroll) */
+  border-radius: 6px; /* Bordas arredondadas */
+  border: 2px solid #1f1f1f; /* Espaço entre thumb e trilha */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #6B7280; /* Cor do thumb ao passar o mouse */
+}
+
+body {
+  scrollbar-width: thin; /* Scrollbar mais fino */
+  scrollbar-color: #3b3b3b #1f1f1f; /* Cor do thumb e da trilha */
 }
